Fix loading indicator alignment

--- a/ui/core-react/src/core-react/tree/Node.scss
+++ b/ui/core-react/src/core-react/tree/Node.scss
@@ -26,8 +26,8 @@ $node-font-size: $iui-font-size;
     align-items: center;
     width: 100%;
 
-    > .loader {
-      margin: auto 4px;
+    > .iui-progress-indicator-radial {
+      margin: 0 4px;
     }
 
     > .expansion-toggle {
